--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,6 @@
   <title>{{ page.title }}</title>
   <meta name="viewport" content="width=device-width">
 
-  <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
 
   <link href="/assets/css/style.css" rel="stylesheet" />
   <link href="/assets/css/colors-dark.css" rel="stylesheet" />
@@ -56,7 +53,7 @@
 
 
   <footer id="footer">
-    <p class="copyright">Copyright &copy; {{ site.time | date: '%Y' }} {{ site.name }}.
+    <p class="copyright">Copyright &copy; {{ site.time | date: '%Y' }} Ajayant Katoch
   </footer>
 
 
